# book-catalog-reader

./: .env.template  .gitignore  docker-compose.yaml
api-gateway/: pyproject.toml
api-gateway/src/: annotations.py  globals.py  main.py
api-gateway/src/api/: auth_api.py  main_proxy_api.py  main_router.py
api-gateway/src/core/: proxy_session_core.py
api-gateway/src/exceptions/: exception_handlers.py
api-gateway/src/models/: cache_models.py  enums.py  response_dtos.py
api-gateway/src/services/: session_service.py  token_service.py
api-gateway/src/utils/: trace_id.py
migrations/: pyproject.toml
migrations/migrations/: env.py
migrations/migrations/versions/: 02161c3076d3_add_added_date_to_review.py  0b6c398df073_add_role_field_to_user.py  11ba386d762e_remove_user_profile_entity_move_all_.py  21f3fa4ffdcf_add_some_new_fields_to_models.py  2c4097b27c85_add_unique_on_user_id_in_review_add_.py  340a3a62d25c_added_cover_file_path_to_book_entity.py  4034d2f9e195_add_field_for_user_blocking_time.py  4d98dff7621b_add_description_field_to_book.py  71eff4a26a8b_initial_migration_added_entities_book_.py  78ff73355714_remove_unqiue_constrait_from_review_.py  7b1e32e6f7fa_change_types_of_added_date_in_book_and_.py  a362d155ce50_add_created_at_field_to_user.py  b8eadb8b5bb1_remove_login_field_and_leave_only_.py  c9076e1ecea0_remove_login_field_and_leave_only_.py  f3a5543e69c2_add_end_page_in_book_status.py  fc1343be8fba_add_added_field_to_book_status.py
migrations/src/: entities.py
user-service/: Dockerfile  pyproject.toml
user-service/src/: annotations.py  globals.py  main.py
user-service/src/api/: auth_api.py  users_cruds_api.py
user-service/src/core/: db_core.py
user-service/src/exceptions/: code_exceptions.py  exception_handlers.py
user-service/src/middlewares/: access_control.py  add_headers_middleware.py  auth_middleware.py
user-service/src/models/: entities.py  enums.py  request_dtos.py  (+1 more)
(+97 files in other folders)
